--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>温泉文化・再生事業ポータル | 株式会社〇〇〇</title>
+    <title>温泉文化・再生事業ポータル | 株式会社アジィル</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
@@ -58,7 +58,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-20">
                 <div class="flex-shrink-0 flex items-center">
-                    <span class="font-serif text-2xl font-bold tracking-widest">株式会社〇〇〇</span>
+                    <span class="font-serif text-2xl font-bold tracking-widest">株式会社アジィル</span>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-8">
@@ -348,28 +348,39 @@
                     <tbody class="divide-y divide-gray-100">
                         <tr class="hover:bg-gray-50 transition">
                             <th class="py-5 px-6 font-medium text-gray-500 w-1/3 bg-gray-50/50">会社名</th>
-                            <td class="py-5 px-6 text-gray-800 font-serif font-bold">株式会社〇〇〇</td>
+                            <td class="py-5 px-6 text-gray-800 font-serif font-bold">株式会社アジィル</td>
                         </tr>
                         <tr class="hover:bg-gray-50 transition">
                             <th class="py-5 px-6 font-medium text-gray-500 bg-gray-50/50">設立</th>
-                            <td class="py-5 px-6 text-gray-800">20XX年 4月</td>
+                            <td class="py-5 px-6 text-gray-800">2023年 3月</td>
                         </tr>
                         <tr class="hover:bg-gray-50 transition">
                             <th class="py-5 px-6 font-medium text-gray-500 bg-gray-50/50">代表者</th>
-                            <td class="py-5 px-6 text-gray-800">代表取締役 ○○ ○○</td>
+                            <td class="py-5 px-6 text-gray-800">代表取締役 名倉由桂</td>
                         </tr>
                         <tr class="hover:bg-gray-50 transition">
                             <th class="py-5 px-6 font-medium text-gray-500 bg-gray-50/50">所在地</th>
-                            <td class="py-5 px-6 text-gray-800">〒000-0000<br>東京都○○区○○ 1-2-3</td>
+                            <td class="py-5 px-6 text-gray-800">〒104-0061<br>東京都中央区銀座一丁目22番11号 銀座大竹ビジデンス 2F</td>
+                        </tr>
+                        <tr class="hover:bg-gray-50 transition">
+                            <th class="py-5 px-6 font-medium text-gray-500 bg-gray-50/50">資本金</th>
+                            <td class="py-5 px-6 text-gray-800">980万円（資本準備金含む）</td>
                         </tr>
                         <tr class="hover:bg-gray-50 transition">
                             <th class="py-5 px-6 font-medium text-gray-500 bg-gray-50/50">事業内容</th>
                             <td class="py-5 px-6 text-gray-800 leading-relaxed">
-                                温泉療法の研究・啓発<br>
-                                飲泉文化普及活動<br>
-                                温泉地活性化コンサルティング<br>
-                                旅館・ホテル運営支援<br>
-                                M&A・事業承継アドバイザリー
+                                <ul class="list-disc list-inside space-y-1 text-gray-700">
+                                    <li>温泉療法の研究と啓発</li>
+                                    <li>飲泉文化の普及活動</li>
+                                    <li>温泉医学に関するシステム開発</li>
+                                    <li>温泉地域の活性化事業</li>
+                                    <li>温泉地や旅館などの事業支援</li>
+                                    <li>事業承継やM&Aサポート</li>
+                                    <li>自治体や観光協会と連携したプロジェクト</li>
+                                    <li>温泉を活用した商品企画、開発</li>
+                                    <li>温泉保全事業</li>
+                                    <li>ほか</li>
+                                </ul>
                             </td>
                         </tr>
                     </tbody>
@@ -385,7 +396,7 @@
             <p class="text-gray-400 mb-10 max-w-xl mx-auto">
                 温泉地の活性化、事業承継に関するご相談など、<br>お気軽にお問い合わせください。
             </p>
-            <a href="mailto:info@example.com" class="inline-flex items-center gap-3 bg-onsen-accent hover:bg-white hover:text-onsen-primary transition-all duration-300 px-8 py-4 rounded-full text-lg font-bold shadow-lg transform hover:-translate-y-1">
+            <a href="mailto:info@asille.jp" class="inline-flex items-center gap-3 bg-onsen-accent hover:bg-white hover:text-onsen-primary transition-all duration-300 px-8 py-4 rounded-full text-lg font-bold shadow-lg transform hover:-translate-y-1">
                 <i data-lucide="mail" class="w-5 h-5"></i>
                 お問い合わせフォームへ
             </a>
@@ -396,7 +407,7 @@
                     <a href="#" class="hover:text-white transition">サイトマップ</a>
                 </div>
                 <div>
-                    &copy; 2024 株式会社〇〇〇 All Rights Reserved.
+                    &copy; 2024 株式会社アジィル All Rights Reserved.
                 </div>
             </div>
         </div>
