--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             
             <div class="mt-20 pt-8 border-t border-gray-700 flex flex-col md:flex-row justify-between items-center text-sm text-gray-400">
                 <div class="flex space-x-6 mb-4 md:mb-0">
-                    <a href="#" class="hover:text-white transition">プライバシーポリシー</a>
+                    <a href="https://ryotakobayashi-dot.github.io/ONSEN/privacy.html" class="hover:text-white transition" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
                     <a href="#" class="hover:text-white transition">サイトマップ</a>
                 </div>
                 <div>
