--- a/index.html
+++ b/index.html
@@ -172,18 +172,18 @@
                             </div>
                             <h3 class="font-serif text-2xl font-bold mb-4">総合プロデュース</h3>
                             <p class="text-gray-300 text-sm leading-relaxed mb-6">
-                                全ての事業を有機的に結合させ、<br>温泉地のブランド価値を最大化します。
+                                温泉情報・飲泉文化・ツーリズムを有機的に統合し、<br>温泉地のブランド価値とファンを最大化します。
                             </p>
                             <hr class="border-gray-600 my-4">
                             <ul class="text-left text-sm space-y-2 text-gray-300">
-                                <li class="flex items-center gap-2"><i data-lucide="check-circle-2" class="w-4 h-4 text-onsen-accent"></i> エリア全体の構想策定</li>
-                                <li class="flex items-center gap-2"><i data-lucide="check-circle-2" class="w-4 h-4 text-onsen-accent"></i> 行政・民間連携サポート</li>
+                                <li class="flex items-center gap-2"><i data-lucide="check-circle-2" class="w-4 h-4 text-onsen-accent"></i> 全国飲泉Map×温泉データの統合設計</li>
+                                <li class="flex items-center gap-2"><i data-lucide="check-circle-2" class="w-4 h-4 text-onsen-accent"></i> 官民連携プロジェクト推進</li>
                             </ul>
                         </div>
                     </div>
                 </div>
 
-                <!-- Card 1: Research -->
+                <!-- Card 1: ACADEMIC (Left Top) -->
                 <div class="glass-panel p-8 rounded-xl shadow-sm hover:shadow-xl transition duration-300 border-l-4 border-onsen-accent group">
                     <div class="flex items-start justify-between mb-4">
                         <div class="p-3 bg-blue-50 rounded-lg text-onsen-accent group-hover:bg-onsen-accent group-hover:text-white transition">
@@ -193,15 +193,15 @@
                     </div>
                     <h3 class="font-bold text-xl mb-3 text-gray-800">温泉療法の研究・啓発</h3>
                     <p class="text-sm text-gray-600 leading-relaxed mb-4">
-                        医学的見地に基づく泉質分析や、現代人の不調に対する温泉効果のエビデンス構築。学会やセミナーを通じた啓発活動。
+                        温泉の泉質や成分に基づき、入浴・飲泉の正しい活用法をわかりやすく発信。国内外の専門家と連携し、エビデンスの整理と普及を進めます。
                     </p>
                     <ul class="text-xs text-gray-500 space-y-1">
-                        <li>• 効能の科学的検証</li>
-                        <li>• ヘルスツーリズムのプログラム開発</li>
+                        <li>• 入浴・飲泉の安全な活用ガイド</li>
+                        <li>• 専門医・学会と連携した情報発信</li>
                     </ul>
                 </div>
 
-                <!-- Card 2: Drinking Culture -->
+                <!-- Card 2: CULTURE (Right Top) -->
                 <div class="glass-panel p-8 rounded-xl shadow-sm hover:shadow-xl transition duration-300 border-l-4 border-blue-400 group">
                     <div class="flex items-start justify-between mb-4">
                         <div class="p-3 bg-blue-50 rounded-lg text-blue-500 group-hover:bg-blue-500 group-hover:text-white transition">
@@ -211,15 +211,15 @@
                     </div>
                     <h3 class="font-bold text-xl mb-3 text-gray-800">飲泉文化の普及活動</h3>
                     <p class="text-sm text-gray-600 leading-relaxed mb-4">
-                        欧州で一般的な「飲泉」の日本国内での普及。正しい知識の提供と、飲泉所の整備支援、特産品開発。
+                        欧州で一般的な「飲泉」を、日本でも日常のセルフケアとして広げます。飲み方の啓発や飲泉スポットの情報整備、関連企画を推進します。
                     </p>
                     <ul class="text-xs text-gray-500 space-y-1">
-                        <li>• 飲泉許可取得サポート</li>
-                        <li>• 温泉水活用商品の企画</li>
+                        <li>• 飲泉の用法・用量の啓発</li>
+                        <li>• 飲泉スポット情報／企画支援</li>
                     </ul>
                 </div>
 
-                <!-- Card 3: Revitalization -->
+                <!-- Card 3: REGIONAL (Left Bottom) -->
                 <div class="glass-panel p-8 rounded-xl shadow-sm hover:shadow-xl transition duration-300 border-l-4 border-green-500 group lg:col-start-1">
                     <div class="flex items-start justify-between mb-4">
                         <div class="p-3 bg-green-50 rounded-lg text-green-600 group-hover:bg-green-600 group-hover:text-white transition">
@@ -229,15 +229,15 @@
                     </div>
                     <h3 class="font-bold text-xl mb-3 text-gray-800">温泉地活性化事業</h3>
                     <p class="text-sm text-gray-600 leading-relaxed mb-4">
-                        廃屋対策、景観整備、イベント企画などを通じ、選ばれる温泉地づくりをハード・ソフト両面から支援。
+                        温泉データと地域資源（食・文化・自然）を掛け合わせ、温泉地の魅力を“体に合う温泉”という新しい軸で再設計。選ばれる温泉地づくりを支援します。
                     </p>
                     <ul class="text-xs text-gray-500 space-y-1">
-                        <li>• 温泉街のリノベーション</li>
-                        <li>• インバウンド誘客戦略</li>
+                        <li>• 温泉データ整備・魅力の見える化</li>
+                        <li>• 地域コラボ（食・体験）企画</li>
                     </ul>
                 </div>
 
-                <!-- Card 4: Business Support -->
+                <!-- Card 4: CONSULTING (Right Bottom) -->
                 <div class="glass-panel p-8 rounded-xl shadow-sm hover:shadow-xl transition duration-300 border-l-4 border-amber-500 group lg:col-start-3">
                     <div class="flex items-start justify-between mb-4">
                         <div class="p-3 bg-amber-50 rounded-lg text-amber-600 group-hover:bg-amber-600 group-hover:text-white transition">
@@ -247,36 +247,37 @@
                     </div>
                     <h3 class="font-bold text-xl mb-3 text-gray-800">旅館・事業支援</h3>
                     <p class="text-sm text-gray-600 leading-relaxed mb-4">
-                        オペレーション改善、DX導入、高付加価値化プランの策定。現場に入り込んだ実践的な経営改善。
+                        温泉療法を活かした宿泊・日帰りプラン（湯治リトリート等）を企画。インバウンド向けの利用ルール案内など、現場に導入できる形で支援します。
                     </p>
                     <ul class="text-xs text-gray-500 space-y-1">
-                        <li>• 収益改善コンサルティング</li>
-                        <li>• 補助金申請サポート</li>
+                        <li>• 湯治リトリート／滞在プログラム設計</li>
+                        <li>• 多言語案内（QR・動画）導入支援</li>
                     </ul>
                 </div>
 
-                <!-- Card 5: M&A (Wide) -->
-                <div class="glass-panel p-8 rounded-xl shadow-sm hover:shadow-xl transition duration-300 border-l-4 border-onsen-primary group md:col-span-2 lg:col-span-3 bg-gradient-to-r from-white to-gray-50">
+                <!-- Card 5: Platform (Wide Bottom) -->
+                <a href="https://nomuonsen.com/" target="_blank" rel="noopener noreferrer" class="glass-panel p-8 rounded-xl shadow-sm hover:shadow-xl transition duration-300 border-l-4 border-onsen-primary group md:col-span-2 lg:col-span-3 bg-gradient-to-r from-white to-gray-50 block">
                     <div class="flex flex-col md:flex-row items-center gap-6">
                         <div class="p-4 bg-gray-100 rounded-full text-onsen-primary group-hover:bg-onsen-primary group-hover:text-white transition flex-shrink-0">
+                            <!-- アイコンは指示通り維持 -->
                             <i data-lucide="handshake" class="w-8 h-8"></i>
                         </div>
                         <div class="flex-1">
                             <div class="flex justify-between items-center mb-2">
-                                <h3 class="font-bold text-xl text-gray-800">事業承継・M&Aサポート</h3>
-                                <span class="text-xs font-bold text-onsen-primary border border-onsen-primary px-2 py-1 rounded">LEGACY</span>
+                                <h3 class="font-bold text-xl text-gray-800">全国飲泉Map・温泉情報プラットフォーム</h3>
+                                <span class="text-xs font-bold text-onsen-primary border border-onsen-primary px-2 py-1 rounded">PLATFORM</span>
                             </div>
                             <p class="text-sm text-gray-600 leading-relaxed">
-                                歴史ある暖簾を絶やさないための、丁寧なマッチングと承継支援。財務デューデリジェンスから、後継者育成、PMI（合併後の統合）まで、想いを繋ぐM&Aを実現します。
+                                全国の飲泉可能スポットを地図化し、泉質・成分・適応症／禁忌症などの情報を集約。温泉事業者がデータを活用できる“共通基盤”として展開します。
                             </p>
                         </div>
                         <div class="hidden md:block">
-                            <button class="text-onsen-accent text-sm font-bold flex items-center gap-1 hover:gap-2 transition-all">
+                            <span class="text-onsen-accent text-sm font-bold flex items-center gap-1 group-hover:gap-2 transition-all">
                                 詳細へ <i data-lucide="arrow-right" class="w-4 h-4"></i>
-                            </button>
+                            </span>
                         </div>
                     </div>
-                </div>
+                </a>
 
             </div>
         </div>
