--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             </div>
                             <h3 class="font-serif text-2xl font-bold mb-4">総合プロデュース</h3>
                             <p class="text-gray-300 text-sm leading-relaxed mb-6">
-                                温泉情報・飲泉文化・ツーリズムを有機的に統合し、温泉地のブランド価値とファンを最大化します。
+                                温泉情報・飲泉文化・ツーリズムを有機的に統合し、<br>温泉地のブランド価値とファンを最大化します。
                             </p>
                             <hr class="border-gray-600 my-4">
                             <ul class="text-left text-sm space-y-2 text-gray-300">
