--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
                                 <i data-lucide="building-2" class="w-8 h-8 text-white"></i>
                             </div>
                             <h3 class="font-serif text-2xl font-bold mb-4">総合プロデュース</h3>
-                            <p class="text-gray-300 text-sm leading-relaxed mb-6">
-                                <span class="inline-block">温泉情報・飲泉文化・ツーリズムを有機的に統合し、</span><br>
-                                <span class="inline-block">温泉地のブランド価値とファンを最大化します。</span>
+                            <p class="text-gray-300 text-xs sm:text-sm leading-relaxed mb-6 tracking-tight">
+                                温泉情報・飲泉文化・ツーリズムを有機的に統合し、<br>
+                                温泉地のブランド価値とファンを最大化します。
                             </p>
                             <hr class="border-gray-600 my-4">
                             <ul class="text-left text-sm space-y-2 text-gray-300">
