--- a/index.html
+++ b/index.html
@@ -366,45 +366,45 @@
                         <div class="mt-6">
                             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4">
                                 <!-- Photo 1: 海外飲泉 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200">
-                                    <img src="kaigai1.png" alt="海外飲泉文化視察" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('kaigai1.png', 'ヨーロッパでの飲泉事情視察')">
+                                    <img src="kaigai1.png" alt="ヨーロッパでの飲泉事情視察" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
-                                        <span class="text-white text-xs font-bold drop-shadow-md">海外飲泉文化視察</span>
+                                        <span class="text-white text-xs font-bold drop-shadow-md">ヨーロッパでの飲泉事情視察</span>
                                     </div>
                                 </div>
                                 <!-- Photo 2: インバウンド雪見風呂 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200">
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound1.png', 'インバウンド支援')">
                                     <img src="inbound1.png" alt="雪見露天風呂体験" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
                                         <span class="text-white text-xs font-bold drop-shadow-md">インバウンド支援</span>
                                     </div>
                                 </div>
                                 <!-- Photo 3: 日本文化体験 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200">
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound2.png', '文化体験')">
                                     <img src="inbound2.png" alt="日本文化体験" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
                                         <span class="text-white text-xs font-bold drop-shadow-md">文化体験</span>
                                     </div>
                                 </div>
                                 <!-- Photo 4: 絶景露天 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200">
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound4.png', '温泉地活性化')">
                                     <img src="inbound4.png" alt="絶景露天風呂" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
                                         <span class="text-white text-xs font-bold drop-shadow-md">温泉地活性化</span>
                                     </div>
                                 </div>
                                 <!-- Photo 5: マナー啓発 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200">
-                                    <img src="anime1.png" alt="入浴マナー啓発" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('anime1.png', '外国語アニメーションによる入浴マナールール動画の作成')">
+                                    <img src="anime1.png" alt="外国語アニメーションによる入浴マナールール動画の作成" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
-                                        <span class="text-white text-xs font-bold drop-shadow-md">マナー啓発</span>
+                                        <span class="text-white text-xs font-bold drop-shadow-md">外国語アニメーションによる<br>入浴マナールール動画の作成</span>
                                     </div>
                                 </div>
                                 <!-- Photo 6: 混浴体験 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200">
-                                    <img src="inbound3.png" alt="多様な入浴スタイル" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound7.png', '湯あみ着や水着着用での入浴「タトゥー禁止」温泉への理解と許容')">
+                                    <img src="inbound7.png" alt="湯あみ着や水着着用での入浴「タトゥー禁止」温泉への理解と許容" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
-                                        <span class="text-white text-xs font-bold drop-shadow-md">多様な入浴スタイル</span>
+                                        <span class="text-white text-xs font-bold drop-shadow-md leading-tight">湯あみ着や水着着用での入浴<br>「タトゥー禁止」温泉への<br>理解と許容</span>
                                     </div>
                                 </div>
                             </div>
@@ -570,6 +570,17 @@
         </div>
     </section>
 
+    <!-- Lightbox Modal -->
+    <div id="lightbox-modal" class="fixed inset-0 z-[60] bg-black/60 hidden flex items-center justify-center backdrop-blur-sm transition-opacity duration-300" onclick="closeLightbox()">
+        <div class="relative max-w-[70vw] max-h-[70vh] flex flex-col items-center" onclick="event.stopPropagation()">
+            <button onclick="closeLightbox()" class="absolute -top-10 right-0 text-white hover:text-onsen-accent transition">
+                <i data-lucide="x" class="w-8 h-8"></i>
+            </button>
+            <img id="lightbox-img" src="" alt="" class="w-full h-full object-contain rounded-lg shadow-2xl border-4 border-white/10">
+            <p id="lightbox-caption" class="mt-4 text-white text-lg font-medium drop-shadow-md"></p>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <script>
         // Icon Initialization
@@ -616,6 +627,25 @@
         document.querySelectorAll('.scroll-reveal').forEach(el => {
             observer.observe(el);
         });
+
+        // Lightbox Functions
+        function openLightbox(src, alt) {
+            const modal = document.getElementById('lightbox-modal');
+            const img = document.getElementById('lightbox-img');
+            const caption = document.getElementById('lightbox-caption');
+            
+            img.src = src;
+            img.alt = alt;
+            caption.textContent = alt;
+            modal.classList.remove('hidden');
+            document.body.style.overflow = 'hidden'; // 背景スクロール防止
+        }
+
+        function closeLightbox() {
+            const modal = document.getElementById('lightbox-modal');
+            modal.classList.add('hidden');
+            document.body.style.overflow = '';
+        }
     </script>
 </body>
 </html>
