--- a/index.html
+++ b/index.html
@@ -380,10 +380,10 @@
                                     </div>
                                 </div>
                                 <!-- Photo 3: 日本文化体験 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound2.png', '文化体験')">
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound2.png', '旅行会社とタイアップしてモデルツアーを実施')">
                                     <img src="inbound2.png" alt="日本文化体験" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
-                                        <span class="text-white text-xs font-bold drop-shadow-md">文化体験</span>
+                                        <span class="text-white text-xs font-bold drop-shadow-md leading-tight">旅行会社とタイアップして<br>モデルツアーを実施</span>
                                     </div>
                                 </div>
                                 <!-- Photo 4: 絶景露天 -->
