--- a/index.html
+++ b/index.html
@@ -365,46 +365,46 @@
                         <!-- Photo Gallery -->
                         <div class="mt-6">
                             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4">
-                                <!-- Photo 1: 海外飲泉 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('kaigai1.png', 'ヨーロッパでの飲泉事情視察')">
-                                    <img src="kaigai1.png" alt="ヨーロッパでの飲泉事情視察" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
+                                <!-- Photo 1: 混浴体験（左上） -->
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound7.png', '湯あみ着や水着着用での入浴「タトゥー禁止」温泉への理解と許容')">
+                                    <img src="inbound7.png" alt="湯あみ着や水着着用での入浴「タトゥー禁止」温泉への理解と許容" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
-                                        <span class="text-white text-xs font-bold drop-shadow-md">ヨーロッパでの飲泉事情視察</span>
+                                        <span class="text-white text-xs font-bold drop-shadow-md leading-tight">湯あみ着や水着着用での入浴<br>「タトゥー禁止」温泉への<br>理解と許容</span>
                                     </div>
                                 </div>
-                                <!-- Photo 2: インバウンド雪見風呂 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound1.png', 'インバウンド支援')">
-                                    <img src="inbound1.png" alt="雪見露天風呂体験" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
-                                    <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
-                                        <span class="text-white text-xs font-bold drop-shadow-md">インバウンド支援</span>
-                                    </div>
-                                </div>
-                                <!-- Photo 3: 日本文化体験 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound2.png', '旅行会社とタイアップしてモデルツアーを実施')">
-                                    <img src="inbound2.png" alt="日本文化体験" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
-                                    <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
-                                        <span class="text-white text-xs font-bold drop-shadow-md leading-tight">旅行会社とタイアップして<br>モデルツアーを実施</span>
-                                    </div>
-                                </div>
-                                <!-- Photo 4: 絶景露天 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound4.png', '温泉地活性化')">
-                                    <img src="inbound4.png" alt="絶景露天風呂" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
-                                    <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
-                                        <span class="text-white text-xs font-bold drop-shadow-md">温泉地活性化</span>
-                                    </div>
-                                </div>
-                                <!-- Photo 5: マナー啓発 -->
+                                <!-- Photo 2: マナー啓発（中上） -->
                                 <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('anime1.png', '外国語アニメーションによる入浴マナールール動画の作成')">
                                     <img src="anime1.png" alt="外国語アニメーションによる入浴マナールール動画の作成" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
                                         <span class="text-white text-xs font-bold drop-shadow-md">外国語アニメーションによる<br>入浴マナールール動画の作成</span>
                                     </div>
                                 </div>
-                                <!-- Photo 6: 混浴体験 -->
-                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound7.png', '湯あみ着や水着着用での入浴「タトゥー禁止」温泉への理解と許容')">
-                                    <img src="inbound7.png" alt="湯あみ着や水着着用での入浴「タトゥー禁止」温泉への理解と許容" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
+                                <!-- Photo 3: 海外飲泉（右上へ移動） -->
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('kaigai1.png', 'ヨーロッパでの飲泉事情視察')">
+                                    <img src="kaigai1.png" alt="ヨーロッパでの飲泉事情視察" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
-                                        <span class="text-white text-xs font-bold drop-shadow-md leading-tight">湯あみ着や水着着用での入浴<br>「タトゥー禁止」温泉への<br>理解と許容</span>
+                                        <span class="text-white text-xs font-bold drop-shadow-md">ヨーロッパでの飲泉事情視察</span>
+                                    </div>
+                                </div>
+                                <!-- Photo 4: 日本文化体験（左下） -->
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound2.png', '旅行会社とタイアップしてモデルツアーを実施')">
+                                    <img src="inbound2.png" alt="日本文化体験" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
+                                    <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
+                                        <span class="text-white text-xs font-bold drop-shadow-md leading-tight">旅行会社とタイアップして<br>モデルツアーを実施</span>
+                                    </div>
+                                </div>
+                                <!-- Photo 5: インバウンド雪見風呂（中下） -->
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound1.png', 'インバウンド支援')">
+                                    <img src="inbound1.png" alt="雪見露天風呂体験" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
+                                    <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
+                                        <span class="text-white text-xs font-bold drop-shadow-md">インバウンド支援</span>
+                                    </div>
+                                </div>
+                                <!-- Photo 6: 絶景露天（右下へ移動） -->
+                                <div class="aspect-[4/3] bg-gray-100 rounded-lg overflow-hidden relative group shadow-sm border border-gray-200 cursor-pointer" onclick="openLightbox('inbound4.png', '温泉地活性化')">
+                                    <img src="inbound4.png" alt="絶景露天風呂" class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
+                                    <div class="absolute inset-0 bg-black/20 opacity-0 group-hover:opacity-100 transition duration-300 flex items-end p-2">
+                                        <span class="text-white text-xs font-bold drop-shadow-md">温泉地活性化</span>
                                     </div>
                                 </div>
                             </div>
