--- a/index.html
+++ b/index.html
@@ -359,8 +359,13 @@
                 <!-- 6: Global (With Gallery) -->
                 <div class="flex flex-col md:flex-row gap-4 p-4 hover:bg-gray-50 transition rounded-lg border-b border-gray-100">
                     <div class="w-full">
-                        <span class="bg-indigo-50 text-indigo-600 text-xs px-2 py-1 rounded mr-2">海外連携</span>
-                        <h4 class="inline font-medium text-gray-800">海外の病院併設温泉施設・医療スパ等を視察し、運営者や医師等と意見交換を実施。<br>フランス・ドイツ・チェコ・イタリア等のネットワークを構築。</h4>
+                        <div class="flex items-start">
+                            <span class="bg-indigo-50 text-indigo-600 text-xs px-2 py-1 rounded mr-3 whitespace-nowrap flex-shrink-0 mt-1">海外連携</span>
+                            <h4 class="font-medium text-gray-800 leading-relaxed">
+                                海外の病院併設温泉施設・医療スパ等を視察し、運営者や医師等と意見交換を実施。<br>
+                                フランス・ドイツ・チェコ・イタリア等のネットワークを構築。
+                            </h4>
+                        </div>
                         
                         <!-- Photo Gallery -->
                         <div class="mt-6">
